# translate

./: .travis.yml  CMakeLists.txt  README.md  translate.pro
include/: translator.h
lib/: lib.pro  translate.cpp  translate.h
lib/helper/: locale.h
lib/translator/: abstracttranslator.h  google.cpp  google.h  googletranslator.cpp  googletranslator.h
src/: CMakeLists.txt  locale.h  translator.cpp
src/translators/: google.cpp  google.h
test/: CMakeLists.txt  googletranslatortest.cpp  googletranslatortest.h  main.cpp  test.pro  threadsafeqsignalspy.h  translatetest.cpp  translatetest.h  tst_testtest.cpp
